add proposal getall
