# ops/api/gzhcommittee_serverswagger.yaml
@@ -135,6 +135,21 @@ paths:
             schema:
               $ref: '#/components/schemas/VoteProposalRequest'
         required: true
+  /proposal/getAllProposal:
+    get:
+      summary: 获取所有提案id
+      tags:
+        - Proposal
+      description: 获取所有提案id
+      security:
+        - Bearer: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllProposalResponse'
   # Auth
   /auth/login:
     post:
@@ -216,6 +231,17 @@ components:
                   type: array
                   items:
                     $ref: '#/components/schemas/MinusMemberuInfo'
+    AllProposalResponse:
+      allOf:
+        - $ref: '#/components/schemas/ApiResponse'
+        - type: object
+          properties:
+            payload:
+              properties:
+                bureaus:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/MinusProposalInfo'
     Member:
       type: object
       properties:
@@ -244,6 +270,13 @@ components:
         validity:
           type: string
           description: member有效性
+
+    MinusProposalInfo:
+      type: object
+      properties:
+        id: 
+          type: string
+          description: member id
 
     CreateProposalRequest:
       type: object
